# antares-datamanager-generator

./: .env  .gitignore  AUTHORS.txt  Dockerfile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties  tox.ini
.github/workflows/: ci.yml
datamanager/: main.py
datamanager/APIGeneratorConfig/: config.py
datamanager/generator/: readJsonForGeneration.py
mnt/nas/generatorJsons/: 1.json
src/antares/: main.py
src/antares/APIGeneratorConfig/: config.py
src/antares/datamanager/: env_variables.py  main.py
src/antares/datamanager/APIGeneratorConfig/: config.py
src/antares/datamanager/core/: app_info.py  dependencies.py  git_info.py  middleware.py  settings.py
src/antares/datamanager/exceptions/: exceptions.py
src/antares/exceptions/: exceptions.py
src/antares/generator/: readJsonForGeneration.py
src/antares/utils/: areaUi.py
tests/: calculate_min_stable_power_test.py  create_dsr_prepro_matrix_test.py  dsr_binding_constraints_test.py  generate_dsr_clusters_test.py  generate_hydro_test.py  generate_link_capacity_data_test.py  generate_link_matrices_test.py  generate_misc_timeseries_test.py  generate_modulation_matrix_test.py  generate_res_clusters_test.py  generate_sts_clusters_matrices_test.py  generate_sts_clusters_test.py  generate_study_process_test.py  generate_thermal_matrices_data_test.py  generate_thermal_matrices_test.py  test_app_info.py  test_app_info_endpoint.py  test_arrow_cleanup_utils.py  test_cleanup_arrow_files.py  test_generate_dsr_clusters.py  test_generate_sts_clusters.py
(+19 files in other folders)
