[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "antares_datamanager_generator"
version = "0.1"
description = """Antares study generator under construction"""
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name="Tatiana Vargas"},
    {name="Moaud El-Azaar"}
]
requires-python = ">=3.10"
dependencies = [
    "configparser~=5.0.2",
    "numpy~=1.26.4",
    "pandas~=2.2.2",
    "pydantic~=2.7.1"
]
classifiers = [
#    Classifiers here: https://pypi.org/classifiers/
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/AntaresSimulatorTeam/antares-datamanager-generator"
"Bug Tracker" = "https://github.com/AntaresSimulatorTeam/antares-datamanager-generator/issues"

# Setuptools
[tool.setuptools.packages.find]
## All the following settings are optional:
where = ["src"]
